--- a/code/index.html
+++ b/code/index.html
@@ -11,9 +11,10 @@
     <input v-model="name">
     <button v-on:click="doAdd">モンスターを追加</button>
     <ul>
-        <li v-for="item in list" v-bind:key="item.id">
+        <li v-for="(item, index) in list" v-bind:key="item.id">
             ID.{{ item.id }} {{ item.name }} HP.{{ item.hp }}
-         </li>
+            <button v-on:click="doRemove(index)">モンスターを削除</button>
+        </li>
     </ul>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
