--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,9 @@
     <ul>
         <li v-for="(item, index) in list" v-bind:key="item.id">
             ID.{{ item.id }} {{ item.name }} HP.{{ item.hp }}
+            <span v-if="item.hp < 50">瀕死</span>
             <button v-on:click="doRemove(index)">モンスターを削除</button>
+            <button v-on:click="doAttack(index)">攻撃する</button>
         </li>
     </ul>
   </div>
