--- a/code/index.html
+++ b/code/index.html
@@ -8,14 +8,9 @@
 <body>
   <div id="app">
     <!-- この#appの内側にテンプレートを書き込んでいく -->
-    <ul>
-        <li v-for="(item, index) in list">
-            ID.{{ item.id }} {{ item.name }} HP.{{ item.hp }}
-            <span v-if="item.hp < 50">瀕死</span>
-            <button v-on:click="doRemove(index)">モンスターを削除</button>
-            <button v-on:click="doAttack(index)">攻撃する</button>
-        </li>
-    </ul>
+    <button v-on:click="handleClick">カウントアップ</button>
+    <button v-on:click="show=!show">表示/非表示</button>
+    <span ref="count" v-if="show">0</span>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/axios@0.17.1/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
